# kicad

./: --  --timings=5  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_EN.md
component-db/: Cargo.toml
component-db/src/: db.rs  lib.rs  query.rs
component-db/tests/: crud_test.rs  import_test.rs  rule_test.rs
docs/: TASKS.md  ai-circuit-design-vision.md  kicad-pcb-design-notes.md  kicad-sch-design-notes.md  kicad-sym-design-notes.md  long-term-roadmap.md  memory-index.md  topology-evaluation.md
example_sch/: DCBoard.json5  DCBoard.kicad_sch  ccd-ccd.json5  ccd-ccd.kicad_sch  ccd-clock.json5  ccd-clock.kicad_sch  ccd-control.json5  ccd-control.kicad_sch  ccd-main-erc.rpt  ccd-main.json5  ccd-main.kicad_sch  ccd-power.json5  ccd-power.kicad_sch  ccd-sensor.kicad_sch  download_iframe.js  ecad-viewer.pc.js  erc-main.rpt  writefile.py
footprints/: DIP_Socket-60_W7.62mm.kicad_mod
kicad-cdb/: Cargo.toml  README.md  README_EN.md
kicad-cdb/compositions/: ccd-power-full.json  ccd-power-ldo.json
kicad-cdb/ic-templates/: AO3408-low-side-switch.json  EL7156.json  FP6276.json  FP6277.json  ME2802.json  NTC-divider.json  RT9193-ADJ.json  SY7208.json
kicad-cdb/src/: bom.rs  composition.rs  db.rs  design.rs  ic_template.rs  import.rs  lib.rs  mcp.rs  models.rs  netlist.rs  pipeline.rs  query.rs  rules.rs  schema.rs  service.rs  skills.rs  topology.rs
kicad-cdb/src/hqapi/: client.rs  mod.rs  parser.rs  sym_parser.rs
kicad-cdb/templates/: boost.json  buck.json  buckboost.json  chargepump.json  flyback.json  inverting.json  ldo.json  led.json  sepic.json
kicad-cdb/tests/: crud_test.rs  import_test.rs  query_test.rs  rule_test.rs  schema_test.rs
kicad-json5/: --release  --tim  --timings  Cargo.toml  README.md  README_EN.md  topology
kicad-json5/src/: error.rs  lib.rs  main.rs
kicad-json5/src/codegen/: json5_gen.rs  mod.rs  sexpr_gen.rs
kicad-json5/src/ir/: component.rs  graphic.rs  mod.rs  schematic.rs  symbol.rs
kicad-json5/src/lexer/: scanner.rs  token.rs
kicad-json5/src/parser/: ast.rs  json5_parser.rs  mod.rs
kicad-json5/src/topology/: connectivity.rs  extractor.rs  summary.rs  types.rs
kicad-json5/tests/: sch_roundtrip.rs
kicad-render/: Cargo.toml  MIGRATION_AUDIT.md  MODULE_REVIEW.md
kicad-render/src/: bridge.rs  constants.rs  lib.rs  main.rs  schematic_renderer.rs
kicad-render/src/layer/: mod.rs
kicad-render/src/painter/: junction_painter.rs  label_painter.rs  mod.rs  pin_painter.rs  sheet_painter.rs  symbol_painter.rs  wire_painter.rs
kicad-render/src/render_core/: color.rs  matrix.rs  mod.rs  transform.rs  types.rs
kicad-render/src/renderer/: mod.rs  svg.rs
kicad-render/src/text/: markup.rs  mod.rs
kicad-render/tests/: sch_render.rs  svg_render_test.rs
kicad-symgen/: Cargo.toml  README.md  README_EN.md
kicad-symgen/src/: fmt.rs  input.rs  lib.rs  lib_table.rs  main.rs  model.rs
kicad-symgen/src/footprint/: mod.rs  outline.rs  pad.rs  sexpr.rs
kicad-symgen/src/footprint/templates/: bga.rs  dip.rs  mod.rs  qfn.rs  qfp.rs  soic.rs  sot.rs
kicad-symgen/src/symbol/: layout.rs  mod.rs  sexpr.rs
src/: constants.rs  error.rs  lib.rs  main.rs  schematic_renderer.rs
src/codegen/: json5_gen.rs  mod.rs  sexpr_gen.rs  standard_symbols.rs
src/codegen/sexpr_gen/: auto.rs  (+4 more)
src/ir/: component.rs  graphic.rs  mod.rs  net.rs  schematic.rs  symbol.rs
src/layer/: mod.rs
src/lexer/: mod.rs
src/painter/: junction_painter.rs  label_painter.rs  mod.rs  pin_painter.rs  sheet_painter.rs  symbol_painter.rs  wire_painter.rs
src/parser/: json5_parser.rs  s_expr_parser.rs
src/render_core/: bbox.rs  graphics.rs
src/renderer/: svg.rs
src/text/: markup.rs
src/topology/: classify.rs  mod.rs  patterns.rs
tests/: svg_render_test.rs
(+10 files in other folders)
