[package]
name = "kicad-json5"
version = "0.7.1"
edition = "2021"
description = "KiCad S-expression to JSON5 compiler"
authors = ["memo"]
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# 错误处理
thiserror = "1"
anyhow = "1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json5 = "0.2"

# UUID 解析
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1"
