[package]
name = "kicad-cdb"
version = "0.5.1"
edition = "2021"

[[bin]]
name = "cdb"
path = "src/bin/cdb.rs"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
