[package]
name = "kicad-cdb"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "cdb"
path = "src/bin/cdb.rs"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
