[package]
name = "kicad-symgen"
version = "0.2.0"
edition = "2021"
description = "KiCad symbol (.kicad_sym) and footprint (.kicad_mod) generator"

[[bin]]
name = "symgen"
path = "src/main.rs"

[dependencies]
kicad-cdb = { path = "../kicad-cdb" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
