[package]
name = "kicad-symgen"
version = "0.3.0"
edition = "2021"
description = "KiCad symbol (.kicad_sym) and footprint (.kicad_mod) generator"

[[bin]]
name = "symgen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
json5 = "0.4"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
